# glofas-anadyr

./: .Rprofile  .gitignore  README.md  Snakefile  container.def  glofas-anadyr.qgz  index.html  package-lock.json  pyproject.toml
.github/workflows/: cd.yml  ci.yml  web-update.yml
_data/timeseries/: 1497.json  1587.json
about/: index.html
assets/css/: style.css
assets/js/: chart.js  map.js
data/: gauges.json
data/cv/: 1496.csv  1497.csv  1499.csv  1502.csv  1504.csv  1508.csv  1587.csv
data/geometry/: anadyr_gauges.gpkg
data/glofas/: PLACEHOLDER
data/hydro/: 1496.csv  1497.csv  1499.csv  1502.csv  1504.csv  1508.csv  1587.csv
data/hydro/cor/: 1496.csv  1497.csv  1499.csv  1502.csv  1504.csv  1508.csv  1587.csv
data/models/: 1497_dqm.pkl
data/raw/: Анадырь-расходы1223.xlsx
data/timeseries/: 1496.json  1499.json  1502.json  1504.json  1508.json
gauges/1496/: index.html
gauges/1497/: index.html
gauges/1499/: index.html
gauges/1502/: index.html
gauges/1504/: index.html
gauges/1508/: index.html
gauges/1587/: index.html
scripts/: correction_check.R  cv_glofas.py  cv_results.R  download_glofas.py  extract_glofas.R  extract_glofas.py  glofas_correction.py  plot_glofas.R  read_discharge.R  trend_analysis.R  ts_plot.R  upload_s3.py
src/: utils.R  utils_ggplot.R  utils_glofas.R  zzz.R
src/glofas/: config.py  download.py  io.py  process.py  s3.py  utils.py
tables/: tbl2_cv-results.csv  tbl3_trends-results.csv
web/: .eleventy.js  .gitignore  build.py  package-lock.json  package.json
web/src/: about.md  index.njk
(+17 files in other folders)
